# Silent-Forge-Engine

./: .clang-format  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP.md  build.bat  build_mingw.bat  create_font_atlas.py  create_test_png.ps1  patch_cmake.py
.github/: branch-protection.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gamepad_support.md  onboarding_test.md  shadow_mapping.md
.github/workflows/: ci.yml
assets/fonts/: consolas.fnt
assets/textures/: test.ppm
cmake/: SilentForgeEngineConfig.cmake.in
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  BUILD_SYSTEM.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT_WORKFLOW.md  GLOSSARY.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  agent_interfaces.md  agent_prompts.md  testing-guidelines.md
docs/architecture/: ARCHITECTURE.md
examples/: CMakeLists.txt  README.md
examples/basic_window/: CMakeLists.txt
include/: SFEGlobalIncludes.hpp
include/core/: Application.hpp  Camera.hpp  Gamepad.hpp  InputManager.hpp  Logger.hpp  SceneNode.hpp  ScreenshotManager.hpp  WindowManager.hpp  config.h
include/glad/: glad.h
include/input/: Gamepad.hpp  gamepad.h
include/rendering/: Framebuffer.hpp  Frustum.hpp  GLContext.hpp  GLContextHelper.hpp  GLStateCache.hpp  InstancedMesh.hpp  Material.hpp  Mesh.hpp  RenderPipeline.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp  TextRenderer.hpp  Texture.hpp
include/utils/: log.h
mini_benchmark/: CMakeLists.txt
mini_benchmark/src/: main.cpp
resources/config/: gamepad.json
scripts/: benchmark_build.bat  benchmark_deps.bat  benchmark_opts.bat  build.ps1  build_fast.ps1  build_msvc.bat  dependency_guard.py  dependency_setup.bat  dev_build.bat  fast_build.bat  fix_build_errors.py  fix_cmakelists.py  full_fix_cmakelists.py  incremental_build.bat  mini_cmake_benchmark.bat  optimized_build.bat  optimized_build_setup.bat  patch_cmake.py  patch_cmakelists.bat  preload_dependencies.bat  preload_dependencies.ps1  run_benchmarks.bat  setup_agent.ps1  setup_agent.sh  setup_dependencies.bat  setup_dependencies.ps1  simple_benchmark.bat  test_agent_setup.ps1
scripts/minimal_test/: CMakeLists.txt  build.bat  main.cpp
shaders/: simple.frag  simple.vert  text.frag  text.vert  text2d.frag  text2d.vert
src/: CMakeLists.txt  CMakeLists.txt.orig  glad.c  main.cpp
src/app/: main.cpp
src/core/: Application.cpp  CMakeLists.txt  Camera.cpp  Gamepad.cpp  InputManager.cpp  SceneNode.cpp  WindowManager.cpp  config.cpp  config.h
src/engine/combat/: plasma_weapon.cpp
src/engine/health/: health_system.cpp
src/examples/: CMakeLists.txt  CMakeLists.txt.orig  InstancedMeshExample.cpp  instanced_mesh_example.cpp
src/input/: CMakeLists.txt  gamepad.cpp
src/rendering/: CMakeLists.txt  CMakeLists.txt.orig  Framebuffer.cpp  Frustum.cpp  GLContext.cpp  GLContextHelper.cpp  GLStateCache.cpp  InstancedMesh.cpp  InstancedMesh.hpp  Material.cpp  Mesh.cpp  RenderPipeline.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  TextRenderer.cpp  Texture.cpp  WindowManager.cpp
src/utils/: CMakeLists.txt  log.cpp
tests/: CMakeLists.txt  CMakeLists.txt.orig  README.md
tests/core/: CMakeLists.txt.orig  Camera_test.cpp  Gamepad_test.cpp  InputManager_test.cpp  SceneNode_test.cpp  TestFixture.hpp  config_test.cpp  core_test.cpp  core_test_app.cpp
tests/fixtures/: invalid_gamepad.json  valid_gamepad.json
tests/helpers/: GLContextHelper.cpp  GLContextHelper.hpp
tests/rendering/: CMakeLists.txt  CMakeLists.txt.orig  Framebuffer_test.cpp  GLContextHelper_test.cpp  GLContext_test.cpp  InstancedMesh_test.cpp  Mesh_test.cpp  Renderer_test.cpp  Shader_test.cpp  test_instanced_mesh.cpp  test_instanced_mesh_custom_attributes.cpp  test_instanced_mesh_frustum_culling.cpp  test_instanced_mesh_performance.cpp  texture_test.cpp
tools/: generate_font_atlas.py
